--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,13 @@
 2008-08-16  Christian Neumair  <cneumair@gnome.org>
 
 	* libnautilus-private/nautilus-icon-canvas-item.c
+	(draw_or_measure_label_text), (nautilus_icon_canvas_item_event):
+	Also display whole icon text when hovering with the mouse over the
+	icon.
+
+2008-08-16  Christian Neumair  <cneumair@gnome.org>
+
+	* libnautilus-private/nautilus-icon-canvas-item.c
 	(nautilus_icon_canvas_item_invalidate_label_size),
 	(nautilus_icon_canvas_item_set_property), (compute_text_rectangle),
 	(nautilus_icon_canvas_item_update_bounds), (layout_get_full_size),
