Obey one-line constraint in compact mode.
2008-08-17  Christian Neumair  <cneumair@gnome.org>

	* libnautilus-private/nautilus-icon-canvas-item.c
	(draw_or_measure_label_text):
	Obey one-line constraint in compact mode.

svn path=/trunk/; revision=14484

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2008-08-17  Christian Neumair  <cneumair@gnome.org>
+
+	* libnautilus-private/nautilus-icon-canvas-item.c
+	(draw_or_measure_label_text):
+	Obey one-line constraint in compact mode.
+
 2008-08-16  Christian Neumair  <cneumair@gnome.org>
 
 	* src/nautilus-navigation-window.c (real_sync_zoom_widgets):
