Updated French translation by Robert-André Mauchin and Claude Paroz.
2008-08-18  Claude Paroz  <claude@2xlibre.net>

	* fr.po: Updated French translation by Robert-André Mauchin and Claude
	Paroz.

svn path=/trunk/; revision=14487

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2008-08-18  Claude Paroz  <claude@2xlibre.net>
+
+	* fr.po: Updated French translation by Robert-André Mauchin and Claude
+	Paroz.
+
 2008-08-17  Jorge Gonzalez  <jorgegonz@svn.gnome.org>
 
 	* es.po: Updated Spanish translation  
