--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-08-19  Luca Ferretti  <elle.uca@libero.it>
+
+	* it.po: Updated Italian translation.
+
 2008-08-18  Claude Paroz  <claude@2xlibre.net>
 
 	* fr.po: Updated French translation by Robert-André Mauchin and Claude
