--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-08-19  Shankar Prasad  <svenkate@redhat.com>
+
+        * kn.po: Updated Kannada translations.
+
 2008-08-19  Luca Ferretti  <elle.uca@libero.it>
 
 	* it.po: Updated Italian translation.
