--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-08-19  Jorge Gonzalez  <jorgegonz@svn.gnome.org>
+
+	* es.po: Updated Spanish translation
+
 2008-08-19  Shankar Prasad  <svenkate@redhat.com>
 
         * kn.po: Updated Kannada translations.
