--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-08-20  Shankar Prasad  <svenkate@redhat.com>
+
+        * kn.po: Updated Kannada translations.
+
 2008-08-19  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>
 
 	 gl.po: Updated Galician translation
