--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2008-08-20  Christian Neumair  <cneumair@gnome.org>
+
+	* libnautilus-private/nautilus-search-engine-simple.c
+	(visit_directory):
+	Make content type search criterion useful, by fixing typo from GIO
+	migration. Fixes #548645.
+
 2008-07-31  Christian Neumair  <cneumair@gnome.org>
 
 	* libnautilus-private/nautilus-autorun.c
