--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2008-08-20  Christian Neumair  <cneumair@gnome.org>
 
+	* NEWS:
+	Update for release.
+
+2008-08-20  Christian Neumair  <cneumair@gnome.org>
+
 	* libnautilus-private/nautilus-program-choosing.c
 	(nautilus_launch_application_from_command),
 	(nautilus_launch_application_from_command_array):
