Post release version bump.
2008-08-20  Christian Neumair  <cneumair@gnome.org>

	* configure.in:
	Post release version bump.

svn path=/trunk/; revision=14505

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2008-08-20  Christian Neumair  <cneumair@gnome.org>
 
+	* configure.in:
+	Post release version bump.
+
+2008-08-20  Christian Neumair  <cneumair@gnome.org>
+
 	* NEWS:
 	Update for release.
 
