--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,8 @@
 	* configure.in:
 	Post release version bump.
 
+=== nautilus 2.23.90 ===
+
 2008-08-20  Christian Neumair  <cneumair@gnome.org>
 
 	* NEWS:
