Fix typo in the schemas type description. Patch by F. Steinel (#548740).
2008-08-21  Cosimo Cecchi  <cosimoc@gnome.org>

	* libnautilus-private/apps_nautilus_preferences.schemas.in:
	Fix typo in the schemas type description.
	Patch by F. Steinel (#548740).

svn path=/trunk/; revision=14508

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2008-08-21  Cosimo Cecchi  <cosimoc@gnome.org>
+
+	* libnautilus-private/apps_nautilus_preferences.schemas.in:
+	Fix typo in the schemas type description.
+	Patch by F. Steinel (#548740).
+
 2008-08-20  Christian Neumair  <cneumair@gnome.org>
 
 	* libnautilus-private/nautilus-icon-canvas-item.c
