Add context for translators. Thanks to Bob Mauchin (#548446).
2008-08-21  Cosimo Cecchi  <cosimoc@gnome.org>

	* src/file-manager/fm-properties-window.c:
	(value_field_update_internal):
	Add context for translators.
	Thanks to Bob Mauchin (#548446).

svn path=/trunk/; revision=14509

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2008-08-21  Cosimo Cecchi  <cosimoc@gnome.org>
 
+	* src/file-manager/fm-properties-window.c:
+	(value_field_update_internal):
+	Add context for translators.
+	Thanks to Bob Mauchin (#548446).
+
+2008-08-21  Cosimo Cecchi  <cosimoc@gnome.org>
+
 	* libnautilus-private/apps_nautilus_preferences.schemas.in:
 	Fix typo in the schemas type description.
 	Patch by F. Steinel (#548740).
