Don't show "Browse Folders" in spatial mode if no folders are selected.
2008-08-21  Cosimo Cecchi  <cosimoc@gnome.org>

	* src/file-manager/fm-directory-view.c: (real_update_menus):
	Don't show "Browse Folders" in spatial mode if no folders are
	selected.
	Patch by Paweł Paprota (#351431).

svn path=/trunk/; revision=14513

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2008-08-21  Cosimo Cecchi  <cosimoc@gnome.org>
+
+	* src/file-manager/fm-directory-view.c: (real_update_menus):
+	Don't show "Browse Folders" in spatial mode if no folders are
+	selected.
+	Patch by Paweł Paprota (#351431).
+
 2008-08-21  Christian Neumair  <cneumair@gnome.org>
 
 	* libnautilus-private/nautilus-icon-canvas-item.c
