--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2008-08-25  Christian Neumair  <cneumair@gnome.org>
+
+	* libnautilus-private/nautilus-icon-container.c
+	(icon_set_position):
+	Fix icon container size calculation (consider margins),
+	use unified container clamping code for RTL and LTR, that considers
+	the entire item dimensions, instead of measuring just the icon
+	rectangle.
+
 2008-08-24  Christian Neumair  <cneumair@gnome.org>
 
 	* libnautilus-private/nautilus-directory.c
