--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-08-26  Yair Hershkovitz  <yairhr@gmail.com>
+
+	* he.po: Updated Hebrew translation by Mark Krapivner.
+
 2008-08-25 Og Maciel <ogmaciel@gnome.org>
 
 	* pt_BR.po: Updated Brazilian Portuguese translation by Vladimir Melo.
