--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-08-27  Ilkka Tuohela <hile@iki.fi>
+
+	* fi.po: Updated Finnish translation.
+
 2008-08-26  Yair Hershkovitz  <yairhr@gmail.com>
 
 	* he.po: Updated Hebrew translation by Mark Krapivner.
