Fix a typo in a plural string. Patch by Petr Kovar (#549662).
2008-08-28  Cosimo Cecchi  <cosimoc@gnome.org>

	* src/file-manager/fm-directory-view.c:
	(update_restore_from_trash_action):
	Fix a typo in a plural string.
	Patch by Petr Kovar (#549662).

svn path=/trunk/; revision=14532

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2008-08-28  Cosimo Cecchi  <cosimoc@gnome.org>
+
+	* src/file-manager/fm-directory-view.c:
+	(update_restore_from_trash_action):
+	Fix a typo in a plural string.
+	Patch by Petr Kovar (#549662).
+
 2008-08-25  Christian Neumair  <cneumair@gnome.org>
 
 	* libnautilus-private/nautilus-icon-container.c
