--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-08-28  Theppitak Karoonboonyanan  <thep@linux.thai.net>
+
+	* th.po: Updated Thai translation.
+
 2008-08-28  Hendrik Richter  <hendrikr@gnome.org>
 
 	* de.po: Updated German translation.
